# bikersentinel

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  REFACTORING_NOTES_v2.md  VERIFICATION_FEATURES.md  hacs.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: hassfest.yml  tests.yml
bikersentinel/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  sensor_old.py  services.yaml
bikersentinel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bikersentinel/translations/: en.json  fr.json
tests/: README.md  __init__.py  conftest.py  test_algorithm.py
